Login navigation setup

--- a/reviews/templates/home.html
+++ b/reviews/templates/home.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}ImgRating{% endblock %}
+
+{% block content %}
+    <p>Welcome to the Home Page!</p>
+
+    <h5>Image of the day</h5>
+        <img src="{{ url_for('static', filename='path/to/your/image.jpg') }}" class="img-fluid" alt="Image of the day">
+{% endblock %}
