register page, image upload doesn't work

--- a/reviews/templates/home.html
+++ b/reviews/templates/home.html
@@ -6,5 +6,5 @@
     <p>Welcome to the Home Page!</p>
 
     <h5>Image of the day</h5>
-        <img src="{{ url_for('static', filename='path/to/your/image.jpg') }}" class="img-fluid" alt="Image of the day">
+        <img src="{{ url_for('static', filename='uploads/cat.jpg') }}" class="img-fluid" alt="Image of the day">
 {% endblock %}
