--- a/reviews/templates/upload.html
+++ b/reviews/templates/upload.html
@@ -16,8 +16,9 @@
         <h5>Uploaded Image</h5>
         <img src="{{ url_for('static', filename='uploads/' + uploaded_image) }}" class="img-fluid" alt="Uploaded Image">
         <h6 class="mt-2">Image ID: {{ uploaded_image }}</h6>
-        <a class="btn btn-secondary" href="{{ url_for('view_image', image_id=uploaded_image.split('_')[0]) }}">View Image</a>
+        <a class="btn btn-secondary" href="{{ url_for('view_image', image_id=uploaded_image.split('_')[0], image_name=uploaded_image.split('_')[1]) }}">View Image</a>
     </div>
+    
     {% endif %}
 </div>
 {% endblock %}
