--- a/reviews/templates/login.html
+++ b/reviews/templates/login.html
@@ -4,16 +4,17 @@
 
 {% block content %}
     <h2 class="mt-5">Login</h2>
-    <form class="mt-4">
+    <form class="mt-4" action="/login" method="post">
         <div class="form-group">
             <a href="/register">If you don't have an account yet, register here</a> <br>
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+            <input type="text" class="form-control" id="username" name="Username" placeholder="Enter your username" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+            <input type="password" class="form-control" id="password" name="Password" placeholder="Enter your password" required>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
+        
     </form>
 {% endblock %}
