--- a/reviews/templates/register.html
+++ b/reviews/templates/register.html
@@ -8,15 +8,15 @@
         <div class="form-group">
             <a href="/login">If you already have an account, login here</a> <br>
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+            <input type="text" class="form-control" id="username" name="Username" placeholder="Enter your username" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+            <input type="password" class="form-control" id="password" name="Password" placeholder="Enter your password" required>
         </div>
         <div class="form-group">
             <label for="password">Repeat Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+            <input type="password" class="form-control" id="password" name="Password Repeat" placeholder="Enter your password" required>
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
