--- a/reviews/templates/register.html
+++ b/reviews/templates/register.html
@@ -4,7 +4,11 @@
 
 {% block content %}
     <h2 class="mt-5">Register</h2>
-    <form class="mt-4">
+    <form class="mt-4" action="/register" method="post">
+        <div class="form-group">
+            <label for="email">Email-Address</label>
+            <input type="text" class="form-control" id="email" name="email_address" placeholder="Enter your username" required>
+        </div>
         <div class="form-group">
             <a href="/login">If you already have an account, login here</a> <br>
             <label for="username">Username</label>
