--- a/reviews/templates/base.html
+++ b/reviews/templates/base.html
@@ -11,14 +11,21 @@
         <a class="navbar-brand" href="/">ImgRating</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto"></ul>
-            <a class="btn btn-primary" href="/login">Login</a>
+            {% if cookie %}
+                <a class="btn btn-primary" href="/logout">Logout</a>
+                <br>
+                <a class="btn btn-primary" href="/feed">Image-Feed</a>
+                <a class="btn btn-primary" href="/upload">Upload</a>
+            {% else %}
+                <a class="btn btn-primary" href="/login">Login</a>
+            {% endif %}
         </div>
     </nav>
-
+    
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
