--- a/reviews/templates/base.html
+++ b/reviews/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +13,9 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto"></ul>
             {% if cookie %}
-                <a class="btn btn-primary me-2" href="{{ url_for('feed') }}">Image Feed</a>
-                <a class="btn btn-primary me-2" href="{{ url_for('upload') }}">Upload</a>
-                <a class="btn btn-primary" href="{{ url_for('logout') }}">Logout</a>
+                <a class="btn btn-primary btn-spacing" href="{{ url_for('feed') }}">Image Feed</a>
+                <a class="btn btn-primary btn-spacing" href="{{ url_for('upload') }}">Upload</a>
+                <a class="btn btn-primary btn-spacing" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
                 <a class="btn btn-primary" href="/login">Login</a>
             {% endif %}
