Fix for hydra and selenium

--- a/reviews/templates/home.html
+++ b/reviews/templates/home.html
@@ -3,6 +3,7 @@
 {% block title %}ImgRating{% endblock %}
 
 {% block content %}
+    <title>Home</title>
     <h1>Welcome to ImgRating</h1> <br>
     <p>The place where you can upload pictures and rate pictures by other users!</p> <br>
 
