--- a/reviews/templates/login.html
+++ b/reviews/templates/login.html
@@ -14,7 +14,7 @@
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="Password" placeholder="Enter your password" required>
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" id="submit" class="btn btn-primary">Login</button>
         
         {% if message %}
         <div class="alert alert-{{ category }}" role="alert">
