--- a/reviews/templates/view_image.html
+++ b/reviews/templates/view_image.html
@@ -22,7 +22,7 @@
         {% for c in comments %}
             <li>
                 <strong>Rating: {{ c.rating }}</strong><br>
-                {{ c.comment | safe }} <!-- safe makes sure the comments are not being html escaped lol -->
+                {{ c.comment | e }} <!-- e ensures html escaping -->
             </li>
         {% else %}
             <li>No comments yet.</li>
